# Put your release notes or change log information
# in here.

BLD-R2-4-5:
  o Found bug created by adding more FCOM PVs/Blobs. Code is missing
    checks to make sure arrays are not overrun -> Must review/refactor the
    BLDMCast code.

BLD-R2-4-4:
  o Fix for XTCAV Phase/Ampl - previous code requested one blob for
    each, but both properties arrive in the same blob	

BLD-R2-4-3:
  o Added check that enables BLD broadcast only if the hostname is
    ioc-sys0-bd01 in production

BLD-R2-4-2:
  o Fixed wrong BLD IP address in multicast BLD receiver - dbior bug fix

BLD-R2-4-1:
  o Minor diagnostics change

BLD-R2-4-0: (Started at the BLD-R2-0-0-BR branch -> got merged back to MAIN_TRUNK)
  o Addition of these PVs to eBeam BLD:

	TCAV:DMP1:360:AV
	TCAV:DMP1:360:PV
	BPMS:DMP1:502:TMIT

  o Change in outgoing data packet
    Version from 0x4000f to 0x5000f
    Addition of 3 extra words (for the above information)

BLD-R2-3-0: (BLD-R2-0-0-BR branch)
  o Addition of Fast Undulator Launch feedback states

  o Change in outgoing data packet
    Version from 0x3000f to 0x4000f
    Addition of 4 extra words (for the Fast Und. Launch feedback)


BLD-R2-2-0: (BLD-R2-0-0-BR branch)
  o Addition of BLD receiver - phase cavity

  o Phase cavity data are available via BSA:

	BLD:SYS0:500:CHARGE1
	BLD:SYS0:500:CHARGE2
	BLD:SYS0:500:FITTIME1
	BLD:SYS0:500:FITTIME2

    There are also a couple of BSA PVs to provide
    PULSEID and STATUS information:

	BLD:SYS0:500:PULSEID
	BLD:SYS0:500:STATUS

    The Phase Cavity BLD is always *at least* one
    PULSEID behind. The PULSEID BSA PV must be
    checked to make sure data from other devices line
    up correctly.

BLD-R2-1-1: (BLD-R2-0-0-BR branch)
  o Addition of Db file with BSA records 

  o Change in startup script to allow individual PVs
    (e.g. BLD:SYS0:500:CHARGE) to be updated on
    "I/O Intr". This is required in order to have
    BSA records working.

  o FLNK fields were added to individual PVs, pointing